--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="ask">
 						
 												<p> <span class="crush">HI CRUSH</span> <br>
-																I like you a lot, wanna go on a date?</p>
+																CRUSH MO DIN AKO?</p>
 								<div class="btn">
 <a href="yes.html"><button id="btn1">Yes</button>		</a>			    <button id="btn2">No</button>
 								</div>				
